--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
     "react-jsonschema-form": "^1.6.1",
+    "react-numeric-input": "^2.2.3",
     "react-scripts": "3.0.1"
   },
   "scripts": {
